# jax-morph

./: .gitignore  02_Combined_simulation.ipynb  README.md  optimization_script.py  optimization_script.sh  pyproject.toml  setup.py
Francesco/: 00 - Initial testing.ipynb  01 - Optimization.ipynb  02 - More chemicals opt.ipynb  03 - NN divrate secretion - 2 types.ipynb  03 - NN divrate secretion.ipynb  04 - Shape.ipynb  05 - Shape +chemgrad (+stop growth).ipynb  07 - Chem distrib test.ipynb  08 - (WORKING) Two cell types homeostasis.ipynb  08 - Hidden state.ipynb  09 - Hidden state.ipynb  10 - Hidden state.ipynb  REINFORCE WORKING.ipynb  TEST - Elongation New Loss.ipynb  TEST - Shape +chemgrad.ipynb  TEST2 - Hidden state.ipynb  TEST3 - French flag.ipynb
Ramya/: 00_Homogeneous_Growth_Demo.ipynb  04_NN_response_function.ipynb  05_Shape_loss.ipynb  06_ScaledField.ipynb  07_division_direction.ipynb  mech_stress_tests.ipynb
jax_morph/: __init__.py  _base.py  cell_division.py  cell_growth.py  datastructures.py  diffusion.py  initial_states.py  losses.py  simulation.py  state_metrics.py  utils.py  visualization.py
notebooks/: 00 - Tutorial notebook and basic docs.ipynb  00_EQX_REFACTOR.ipynb  00a - Simulation notebook.ipynb  01 - BASICS - Forward Simulation.ipynb  02 - BASICS - Policy Gradients Optimization.ipynb  03 - OPT - Cell type homeostasis.ipynb  03 Chemical Homeostasis.ipynb  04 - OPT - Elongation.ipynb  04 Elongation.ipynb  05 - OPT - V shape.ipynb  05 VShape.ipynb  06 Homogeneous Growth.ipynb  0x - TWO CELL TYPES.ipynb  ARIANA - 2 cell types.ipynb
(+125 files in other folders)
